# LexLang

./: .dockerignore  .env.example  .gitignore  Dockerfile.bak  LICENSE  Makefile  README.md  code_of_conduct.md  compose.yaml  contributing.md  contributing_guide.md  convertir_csv_vers_json.py  lexique_ewe.csv  lexique_mina_annoté.json  license_file.md  pyproject.toml  readme.md  readme_main.md  requirements.txt  setup.py  setup_file.py  test_interactive.py  test_nlp_basic.py
.github/workflows/: main.yml
3.0/: Makefile
3.0/admin/: CONTRIBUTING.md
3.0/configs/: tonal_rules.yaml
3.0/data/lexicons/: ewe-english.json  ewe-french.json  french-ewe.json
3.0/docs/guides/: tonal_processing.md
3.0/metrics/: tonal_evaluation.py
admin/: CODE_OF_CONDUCT.md
configs/: default.yaml  dialect_anlo.yaml  dialect_badou.yaml  dialect_inland.yaml  preprocess.yaml  tokenizer.yaml
data/: base_lexicale.json
data/corpora/: corpus.txt
data/corpora/metadate/: anlo_metadata.yaml
data/lexicons/: dialect_variants.csv  ewe-french.json  lexicon_m.py  tonal_dictionary.py
data/linguistic_resources/dialects/: anlo.json  inland.json  variation_rules.json
data/linguistic_resources/morphology/: prefixes.json  stems.json  suffixes.json
data/linguistic_resources/phonetics/: allophonic_rules.json  phonemes.json  tones.json
data/linguistic_resources/tonal/: tonal_exceptions.json  tone_sandhi.json
docs/: data_format.md
docs/api/: reference.md
docs/guides/: dialect_handling.md  ewe_processing.md  linguistic_guide.md  user_guide.md
examples/: advanced_analysis.py  basic_usage.py
examples/frontend/react/: Dockerfile
examples/mobile/react_native/: Dockerfile
metrics/: dialect_consistency.py  dialect_variation.py  metrics.txt  morphological_accuracy.py  morphological_f1.py  tonal_distance.py  tonal_evaluation.py
models/: map.txt  metadata.yaml
src/: __init__.py  app.py  cli.py  config.py  exceptions.py  main.py  utils.py
src/api/: __init__.py  auth.py  lexical_api.py  middleware.py  models.py  routes.py
src/core/: __init__.py  base_processor.py  linguistic_loader.py  linguistic_processor.py  nlp_engine.py  pipeline.py  processing_pipeline.py  tokenizer.py
src/core/dialect_handler/: __init__.py  dialect_converter.py  (+3 more)
src/database/: connection.py  models.py
src/utils/: data_manager.py
tests/: lingustic.txt  test_dialect_detection.pu  test_noun_classes.py  test_tone_sandhi.py
tests/unit/: test_pos_tagger.py  test_tokenizer.py
(+32 files in other folders)
