// TODO: Fill in content for pyproject.toml
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexlang"
version = "0.1.0"
description = "Linguistic toolkit for Ewe language analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Votre Nom", email = "votre@email.com"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "nltk>=3.6.0",
    "pyyaml>=6.0",
    "tqdm>=4.0.0",
    "click>=8.0.0",
    "pytest>=7.0.0"
]

[project.scripts]
lexlang = "lexlang.cli:main"

[project.urls]
Homepage = "https://github.com/votreusername/lexlang"
Documentation = "https://lexlang.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]